--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,25 @@
 spring:
+  profiles:
+    active: prod
+
   datasource:
     url: jdbc:postgresql://localhost:5432/ticketsdb
     username: postgres
     password: 123456
+
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
     show-sql: true
+
   flyway:
     enabled: true
     locations: classpath:db/migration
-    baseline-on-migrate:  true
+    baseline-on-migrate: true
+
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
+
+server:
+  port: 8081
